--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
    	"start": "node ./server.js"
   },
   "dependencies": {
-    "express"       : "3.3.x",
+    "express": ">=3.11.0",
     "mongoose": ">=5.7.5"
   }
 }
